--- a/index.html
+++ b/index.html
@@ -1,17 +1,121 @@
 <!DOCTYPE html>
 <html lang='pt-br'>
-  <head>
+
+<head>
   <meta charset='UTF-8'>
   <meta http-equiv='X-UA-Compatible' content='IE=edge'>
   <meta name='viewport' content='width=device-width, initial-scale=1.0'>
+  <!-- GOOGLE FONTS -->
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Actor&family=Darker+Grotesque:wght@300;400;500;600;700;800;900&family=Iceland&display=swap" rel="stylesheet" />
   <!-- FAVICON -->
-  <link rel='shortcut icon' href='./assets/favicon.png' type='image/png'>
+  <link rel='shortcut icon' href='./assets/favicon.jpg' type='image/png'>
   <!-- CSS -->
   <link rel='stylesheet' href='./css/style.css'>
   <!-- JAVASCRIPT -->
   <script src='./js/main.js' defer></script>
   <title>The Last Of Us | Bruno Henrique</title>
 </head>
-  <body>
-  </body>
+
+<body>
+
+  <div class="home">
+    <div class="container">
+      <header class="flex">
+        <figure>
+          <img src="./assets/KenzieAcademyLogo.png" />
+        </figure>
+        <nav>
+          <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">Episodes</a></li>
+            <li><a href="#">Story</a></li>
+            <li><a href="#">Gallery</a></li>
+          </ul>
+        </nav>
+      </header>
+
+      <main>
+        <h1>The Last of Us |</h1>
+        <p>
+          When you are lost in the dark, look for the light, belive in the
+          fireflies.
+        </p>
+        <div>
+          <button class="active">MORE INFO</button>
+          <button class="inactive">WATCH TEASER</button>
+        </div>
+        <section class="flex-column">
+          <h3>INSIDE</h3>
+          <ul class="flex">
+            <li>SURVIVAL</li>
+            <li>RELATIONSHIP</li>
+            <li>ADVENTURE</li>
+          </ul>
+        </section>
+      </main>
+
+    </div>
+  </div>
+
+  <!-- Episodes -->
+  <section class="episodes">
+    <div class="container flex">
+      <section class="posts">
+        <p>
+          An American post-apocalyptic drama television series created by
+          Craig Mazin and Neil Druckmann for HBO. Twenty years into a pandemic
+          caused by a mass fungal infection, which forces its hosts to
+          transform into zombie-like creatures and collapses society.
+        </p>
+        <p>
+          The series follows Joel (Pedro Pascal), a smuggler tasked with
+          escorting the teenage Ellie (Bella Ramsey) across a post-apocalyptic
+          United States. Guest stars include Nico Parker as Joel's daughter
+          Sarah, Gabriel Luna as Joel's younger brother Tommy, Merle Dandridge
+          as resistance leader Marlene, and Anna Torv as Joel's smuggler
+          partner Tess.
+        </p>
+        <p>
+          The Last of Us was filmed throughout Alberta from July 2021 to June
+          2022. It is the first HBO series based on a video game, and is a
+          joint production by Sony Pictures Television, PlayStation
+          Productions, Naughty Dog, the Mighty Mint, and Word Games.
+        </p>
+      </section>
+      <ol class="episodes-list">
+        <li>
+          <img src="/assets/episodes/episode1.svg" alt="">
+          <div>
+            <h4>"When You're Lost in the Darkness"</h4>
+            <p>
+              In 2003, a mass fungal infection of mutated Cordyceps sparks a global pandemic. Joel flees with his
+              daughter, Sarah, and brother, Tommy, from their Texas home; Sarah is killed by a soldier.
+            </p>
+          </div>
+        </li>
+      </ol>
+    </div>
+  </section>
+
+  <!-- Footer -->
+  <footer>
+    <div class="container flex">
+      <figure>
+        <img src="./assets/KenzieAcademyWVertical 1.svg" />
+      </figure>
+      <section class="flex-column">
+      <h2>Programe o seu futuro aqui.</h2>
+      <h3>Siga nossas redes sociais</h3>
+      <div class="footer-icons">
+        <img src="./assets/icons/instagram.svg" />
+        <img src="./assets/icons/linkedin.svg" />
+      </div>
+    </section>
+  </div>
+</footer>
+
+</body>
+
 </html>
